testdata/baselines/reference/submodule/conformance/importDeferInvalidNamed.errors.txt
b.ts(1,20): error TS1005: 'from' expected.
b.ts(1,22): error TS1434: Unexpected keyword or identifier.
b.ts(1,22): error TS2304: Cannot find name 'from'.


==== a.ts (0 errors) ====
    export function foo() {
        console.log("foo from a");
    }
    
==== b.ts (3 errors) ====
    import defer { foo } from "a";
                       ~
!!! error TS1005: 'from' expected.
                         ~~~~
!!! error TS1434: Unexpected keyword or identifier.
                         ~~~~
!!! error TS2304: Cannot find name 'from'.
    
    foo();